fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,24 @@
 .navbar-default {
-			background-color: orange;
+			background-color: white;
 			border-style: solid;
-			border-color: black;
+			border-color: #cccccc;
 			border-bottom-width: 5px;
 		}
 
 		.navbar-header {
 			color: white;
-			background-color: teal;
+			background-color: #4aaaa5;
 			padding: 20px;
-			font-size: 25px;
+			font-size: 30px;
+			font-family: 'Georgia', Times, 'Times New Roman', serif;
 		}
 
 		.navbar-right {
-			background-color: yellow;
+			background-color: white;
 			color: white;
-			margin-top: 10px;
-			margin-right: 10px;
-			font-size: 15px
+			margin-top: 15px;
+			font-size: 20px;
+			font-family: 'Georgia', Times, 'Times New Roman', serif;
 		}
 
 		.panel-footer {
@@ -26,29 +27,18 @@
 			right: 0px;
 			left: 0px;
 			text-align: center;
-			background-color: green;
+			background-color: #666666;
+			border-width: 0px;
 			border-top-width: 5px;
-			border-color: black;
+			border-color: #4aaaa5;
 			border-style: solid;
+			color: white;
+			z-index: 2;
 		}
 
-		/*.main {
-			float: left;
-			width: 50%;
-			background-color: lightblue;
-			margin: 10px;
-			padding: 0px 10px 10px 10px;
+		body {
+			background-image: url(../images/background.png);
 		}
-
-		.sidebar {
-			float: left;
-			width: 270px;
-			height: 180px;
-			background-color: lightgreen;
-			margin: 10px;
-			padding: 0px 10px 10px 10px;
-
-		}*/
 
 		img {
 			padding: 5px;
@@ -59,27 +49,22 @@
 		}
 
 		p {
-			margin: 10px;
+			font-size: 16px;	
+    		font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    		color: #777777;
 		}
 
-		/*.about {
-			padding: 10px;
-			margin: 10px;
-		}*/
+		.about, .connect, .portfolio, .contact {
+			background-color: white;
+			padding: 20px;
+			margin: 20px;
+		}
 
-		/*.portfolio {
-			padding: 10px;
-			margin: 10px;
-		}*/
-
-		/*.connect {
-			padding: 10px;
-			margin: 10px;
-		}*/
+		.connect {
+			margin-bottom: 50px;
+		}
 
 		.images {
-			/*display: inline-block;*/
-			/*float: left;*/
 			margin: 0px;
 			padding: 5px;
 		}
@@ -91,24 +76,25 @@
 		.box {
 		    background-color: #4aaaa5;
 		    color: white;
-		    width: 140px;
+		    width: 190px;
 		    margin-left: 5px;
 		    text-align: center;
 		    padding: 10px 0px;
 		    position: absolute;
 		    bottom: 30px;
-		    z-index: 2;
+		    z-index: 1;
 		}
 
-		/*.panel-footer {
-			position: fixed;
-			bottom: 0px;
-			right: 0px;
-			left: 0px;
-			text-align: center;
-			background-color: green;
-			border-top-width: 5px;
-			border-color: black;
-			border-style: solid;
+		.self {
+			width: 50%;
+			height: auto;
+		}
 
-		}*/
+		.container {
+			width: 100%;
+		}
+		
+
+			
+
+
